@@ -15,8 +15,11 @@
    <script type="text/javascript" src="/static/js/dojo/dojo.js" />
 
    <script type="text/javascript">
+            dojo.require("dojo.dom.*");
             dojo.require("dojo.event.*");
+            dojo.require("dojo.html.*");
             dojo.require("dojo.io.*");
+            dojo.require("dojo.json");
             dojo.require("dojo.lfx.*");
             dojo.require("dojo.style.*");
    </script>
