@@ -1,3 +1,7 @@
+2006-10-08  Doug Hellmann  <dhellmann@racemi.com>
+
+	* templates/base.html: Add more dojo.require calls.
+
 2006-10-05  Doug Hellmann  <dhellmann@racemi.com>
 
 	* templates/base.html: Move the status message block to the end of
